--- a/style/main.css
+++ b/style/main.css
@@ -7,33 +7,48 @@
     line-height: 100%;
 }
 
+html {
+    scrollbar-color: #4d9f3d7c #00000010;
+    scrollbar-width: auto;
+}
+
 body {
     background-color: #151515;
     color: #F1F1F1;
+    width: 100vw;
+    height: 100vh;
 
 }
 
 .container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap-reverse;
+    /* flex-wrap: wrap-reverse; */
     justify-content: space-between;
+    /* align-items: center; */
     max-width: 1440px;
-    min-width: 512px;
+    /* min-width: 466px; */
     margin: 0 auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding: 0 5%;
 }
 
 #bgimage {
-    width: 50%;
-    height: 50%;
+    width: 640px;
 }
 
 /* Header */
 
+.logo {
+    min-width: 128px;
+}
+
 header {
-    padding: 0 5%;
+    padding: 0 5vw;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    /* margin: 0 auto; */
 }
 
 .header {
@@ -42,7 +57,7 @@ header {
     align-items: center;
     column-gap: 64px;
     max-width: 1440px;
-    /* min-width: 512px; */
+    min-width: auto;
     height: 100px;
     padding: 0 40px;
     margin: 0 auto;
@@ -85,7 +100,7 @@ header {
 .block {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     gap: 8px;
     border-radius: 24px;
@@ -93,7 +108,7 @@ header {
     backdrop-filter: blur(25px);
     padding: 24px 28px;
     margin-top: 40px;
-    max-width: 480px;
+    /* max-width: 480px; */
     width: auto;
 }
 
@@ -102,6 +117,8 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    gap: 32px;
+    /* min-width: 480px; */
     width: auto;
 }
 
@@ -122,4 +139,32 @@ p {
 
 p.colored {
     color: #4E9F3D;
+}
+
+/* Footer */
+
+footer {
+    margin-top: 64px;
+    padding: 0 5vw;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 64px;
+    max-width: 1440px;
+    min-width: auto;
+    height: 50px;
+    padding: 0 40px;
+    margin: 0 auto;
+    border-radius: 24px 24px 0 0;
+    background: rgba(45, 45, 45, 0.20);
+    backdrop-filter: blur(25px);
+    font-size: 0.6em;
+}
+
+.socials {
+    display: flex;
+    gap: 24px;
 }
